# netwarp_public

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
caffe/cmake/: patch_caffe_with_netwarp.cmake
caffe/include/caffe/layers/: warp_layer.hpp
caffe/src/caffe/layers/: warp_layer.cpp  warp_layer.cu
caffe/src/caffe/proto/: caffe.proto
caffe/src/caffe/test/: test_warp_layer.cpp
models/: pspnet101_cityscapes_conv5_4netwarp_deploy.prototxt
scripts/: cityscapes_data.py  compute_scores.py  extract_opticalflow.py  fetch_and_transform_data.py  get_netwarp_pspnet_model.sh  run_netwarp.py
